--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ footer {
     transform: translateY(0);
   }
 }
-.presentacion h1, h2 {
+.presentacion h1 {
   animation: fadeInUp 1s ease-in-out forwards;
 }
 
